<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".FilterActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onOkButtonClicked"
        ></Button>

    <LinearLayout
        android:id="@+id/filter_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_date_title"
            ></TextView>

        <RadioGroup
            android:id="@+id/filter_date_radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/filter_date_up_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/filter_date_up"/>

            <RadioButton
                android:id="@+id/filter_date_down_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_date_down"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_teg_title"/>

        <CheckBox
            android:checked="true"
            android:id="@+id/filter_teg_snimok_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teg_snimok" />

        <CheckBox
            android:checked="true"
            android:id="@+id/filter_teg_spravka_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teg_spravka" />

        <CheckBox
            android:checked="true"
            android:id="@+id/filter_teg_analiz_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teg_analiz" />

        <CheckBox
            android:checked="true"
            android:id="@+id/filter_teg_visit_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teg_visit" />

        <CheckBox
            android:checked="true"
            android:id="@+id/filter_teg_other_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teg_other" />

    </LinearLayout>

    <TextView
        android:id="@+id/incorrect_input_texview_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/filter_layout"
        android:textColor="#FF0000"
        ></TextView>

</RelativeLayout>