<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20pt"
    tools:context=".CreateUserPasswordActivity">

    <EditText
        android:id="@+id/new_user_password_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_user_password"
        android:layout_centerInParent="true"
        ></EditText>

    <RadioGroup
        android:id="@+id/user_type_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/new_user_password_edittext"
        android:layout_centerHorizontal="true"
        >

        <RadioButton
            android:id="@+id/patient_type_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usertype_patient"
            ></RadioButton>

        <RadioButton
            android:id="@+id/doctor_type_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usertype_doctor"
            android:layout_marginLeft="10pt"
            ></RadioButton>

        </RadioGroup>

    <Button
        android:id="@+id/create_user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_above="@id/page_1_3"
        android:layout_centerHorizontal="true"
        android:layout_margin="5pt"
        android:onClick="onCreateUserButtonClicked"
        ></Button>

    <TextView
        android:id="@+id/incorrect_input_texview_create_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/create_user_button"
        android:textColor="#FF0000"
        ></TextView>

    <TextView
        android:id="@+id/page_1_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1/3"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        ></TextView>

</RelativeLayout>